# RAG_From_Scratch

./: README.md  pyproject.toml  requirements.txt
Conversational_Memory/: conversational_memory.ipynb  loading_model.ipynb
Hybrid_Search_Techniques/: BM25+Cosine_Similarity.ipynb  Langchain_Rag.txt  Maximal_Marginal_Relevance.ipynb  Reranking.ipynb  langchain.txt
Langraph and Langsmith Tutorial/: Simple_Graph_Architecture.ipynb
Query_Enhancement_Techniques/: Hypothetical_Dynamic_Embedding.ipynb  Langchain_crewai.txt  Query_Expansion_Implementation.ipynb  Query_decomposition.ipynb
Query_Enhancement_Techniques/output/hyde_langchain/: chroma.sqlite3
Query_Enhancement_Techniques/output/query_wiki/: chroma.sqlite3
Query_Enhancement_Techniques/output/steve_jobs/: chroma.sqlite3
Semantic_Chunking/: langchain.txt  semantic_chunking.ipynb
Vector_Store/: ChromaDB.ipynb  FAISS.ipynb
Vector_Store/chroma_db/: chroma.sqlite3
Vector_Store/faiss_index/: index.faiss  index.pkl
